some other changes added

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -41,7 +41,7 @@
   border-radius: 0px 0px 20px 20px;
 }
 
-.card {
+.card-1 {
   height: 60vh;
   background: linear-gradient(108.67deg, rgba(0, 156, 222, 0.44) 18.18%, rgba(217, 217, 217, 0.84) 99.4%);
 }
